[package]
name                                    =   "const_type"
description                             =   "define enum-like const-types, but with aliases for variants"
version                                 =   "0.1.3"
authors                                 =   [
                                              "sivizius <sivizius@ohai.su>",
                                            ]
edition                                 =   "2018"
license                                 =   "MIT"
repository                              =   "https://github.com/sivizius/const_type"

[dependencies]

[lib]
path                                    =   "source/lib.rs"
